# ActinoEdit

./: .gitignore  AGENTS.md  ActinoEdit Final Development Plan.docx  ActinoEdit_Development_Plan.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/release-notes/: v0.4.0.md
.github/workflows/: db-migrations.yml  release.yml  test.yml
.mimocode/skills/codebase-bootstrap/: SKILL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_entity_links.py  003_constraints_design_runs.py
docs/: database.md  design.md  developer_guide.md  user_guide.md  web_app.md
docs/releases/: v0.2.0.md
examples/: config.yaml  demo_annotation.gbk  demo_annotation.gff  demo_bgc.bed  demo_genome.fasta  lab_server.yaml  local.yaml
examples/profiles/: actinomycete.yaml  bacillus.yaml  custom.yaml  ecoli.yaml  streptomyces.yaml  yeast.yaml
scripts/: build_desktop.py  build_windows_portable.py  install_actinoedit.ps1  install_and_run.bat  launch_demo.bat  launch_demo.sh  run_desktop.py  run_web.py
src/actinoedit/: __init__.py  cli.py  config.py  resources.py
src/actinoedit/annotation/: __init__.py  bgc.py
src/actinoedit/core/: __init__.py  base_editor.py  bgc.py  crispri.py  design_types.py  input_summary.py  models.py  offtarget.py  offtarget_index.py  pam.py  pipeline.py  profiles.py  resolve.py  scanner.py  scoring.py  sequence.py  target.py
src/actinoedit/db/: __init__.py  config.py  crud.py  database.py  migrations.py  models.py  session.py  timeutil.py
src/actinoedit/io/: __init__.py  fasta.py  gbk.py  gff.py
src/actinoedit/reports/: __init__.py  excel.py  html.py  tables.py
src/actinoedit/web/: __init__.py  app.py  components.py  (+5 more)
tests/: __init__.py  conftest.py  test_bgc.py  test_db_isolation.py  test_db_migrations.py  test_db_relationships.py  test_design.py  test_e2e.py  test_fasta.py  test_gbk.py  test_gff.py  test_models.py  test_offtarget.py  test_offtarget_index.py  test_pam.py  test_pipeline.py  test_profiles.py  test_reports.py  test_scanner.py  test_scoring.py  test_sequence.py  test_smoke.py  test_target.py  test_utc_now.py  test_v04_launcher.py  test_v04_stabilization.py  test_web.py  test_web_states.py
