[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actinoedit"
version = "0.1.0"
description = "CRISPR Design Toolkit for Actinomycetes and Industrial Microbes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ActinoEdit Team" },
]
keywords = ["crispr", "bioinformatics", "actinomycetes", "guide-rna", "sgrna"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.80",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "typer>=0.9",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "nicegui>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.scripts]
actinoedit = "actinoedit.cli:app"
actinoedit-web = "actinoedit.web.app:main"

[project.urls]
Homepage = "https://github.com/actinoedit/actinoedit"
Documentation = "https://github.com/actinoedit/actinoedit#readme"
Repository = "https://github.com/actinoedit/actinoedit"
Issues = "https://github.com/actinoedit/actinoedit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/actinoedit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
